# hack

./: .gitignore  Flattened.sol  README.md  hardhat.config.cjs  hardhat.config.ts  package-lock.json  package.json
contracts/: TestERC20.sol  deposit.sol  solopatty.sol  token.sol
scripts/: deploy.js  deploy_tokens.js
tee/: Cargo.toml
tee/src/: main.rs
test/: Withdraw.ts
