[package]
name = "matching_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
anyhow = "1.0"
awc = "3.3"
clap = { version = "4.4", features = ["derive"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ethabi = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
url = "2.5"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
